kubernetes/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.kube.crowlight.com`)
      services:
        - name: argocd-server
          port: 443
      # middlewares:
      #   - name: default-headers
      #     namespace: traefik
    - kind: Rule
      match: Host(`argocd.kube.crowlight.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
  tls:
    secretName: kube-crowlight-com-tls
